# ChangeLog for media-plugins/mythbrowser
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythbrowser/ChangeLog,v 1.55 2011/07/28 21:04:58 cardoe Exp $

  28 Jul 2011; Doug Goldstein <cardoe@gentoo.org>
  -mythbrowser-0.22_p22763.ebuild, -mythbrowser-0.23_p25065.ebuild:
  Cull old versions

  08 Jul 2011; Doug Goldstein <cardoe@gentoo.org>
  mythbrowser-0.23.1_p25396.ebuild:
  Mark the latest 0.23.1 as stable since I've been running it on both x86 and
  amd64 stable machines for a long time.

  01 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  mythbrowser-0.22_p22763.ebuild:
  Stable on amd64 wrt bug #323745

*mythbrowser-0.23.1_p25396 (27 Jul 2010)

  27 Jul 2010; Doug Goldstein <cardoe@gentoo.org>
  +mythbrowser-0.23.1_p25396.ebuild:
  Update to version that properly identifies itself as 0.23.1

  26 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  mythbrowser-0.22_p22763.ebuild:
  stable x86, bug 323745

*mythbrowser-0.23_p25065 (10 Jun 2010)

  10 Jun 2010; Doug Goldstein <cardoe@gentoo.org>
  +mythbrowser-0.23_p25065.ebuild:
  Add experimental ebuild for MythTV 0.23

  09 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  -mythbrowser-0.21_p17105.ebuild:
  Remove tree incompatible version wrt #280303.

  17 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  mythbrowser-0.22_p22763.ebuild, metadata.xml:
  replace media-tv herd for MythTV

*mythbrowser-0.22_p22763 (08 Nov 2009)

  08 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  -mythbrowser-0.22_rc22667.ebuild, +mythbrowser-0.22_p22763.ebuild:
  add 0.22 final version

*mythbrowser-0.22_rc22667 (02 Nov 2009)

  02 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  +mythbrowser-0.22_rc22667.ebuild:
  add 0.22 RC2 version

  19 Jul 2009; Doug Goldstein <cardoe@gentoo.org>
  -mythbrowser-0.21_p16468.ebuild, mythbrowser-0.21_p17105.ebuild:
  use new eclass bits. clean old version.

  01 Jul 2009; Doug Goldstein <cardoe@gentoo.org>