@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/mythbrowser
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythbrowser/ChangeLog,v 1.55 2011/07/28 21:04:58 cardoe Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythbrowser/ChangeLog,v 1.56 2012/03/08 02:25:38 cardoe Exp $
+
+  07 Mar 2012; Doug Goldstein <cardoe@gentoo.org>
+  -mythbrowser-0.23.1_p25396.ebuild:
+  Remove old version
 
   28 Jul 2011; Doug Goldstein <cardoe@gentoo.org>
   -mythbrowser-0.22_p22763.ebuild, -mythbrowser-0.23_p25065.ebuild:
